<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_category">Category</string>
    <string name="name">Name</string>
    <string name="cashier">Cashier</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="girl_in_cart">girl_in_cart</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="title_activity_home">Home_Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="offers">Offers</string>
    <string name="new_products">New Products</string>
    <string name="my_orders">My Orders</string>
    <string name="search_your_item_here">Search Your Item Here</string>
    <string name="popular_plants">Popular Plants</string>
    <string name="view_all">View All</string>
    <string name="exoticplants">ExoticPlants</string>
    <string name="plant_zone">Plant Zone</string>
    <string name="flower_girl">flower girl</string>
    <string name="flowergirl2">flowergirl2</string>
    <string name="welcome_to_plant_zone">WELCOME TO PLANT ZONE</string>
    <string name="register_wel">Register</string>
    <string name="we_are_happy_to_have_you_get_ready_to_buy_fresh_flowers_indoor_plants_outdoor_plants_and_so_much_more">We Are Happy To Have You!! Get Ready To Buy Fresh Flowers, Indoor Plants, Outdoor Plants And So Much More!</string>
    <string name="login">LogIn</string>
    <string name="something">something</string>
    <string name="hey">hey</string>
    <string name="registration">registration</string>
    <string name="explore_exotic_plants">Explore Exotic Plants</string>
    <string name="flower_plants">Flower Plants</string>


</resources>