<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/offer"
            android:title="@string/offers" />
        <item
            android:id="@+id/nav_newProducts"
            android:icon="@drawable/renew"
            android:title="@string/new_products" />
        <item
            android:id="@+id/nav_MyOrders"
            android:icon="@drawable/cart"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/myCart"
            android:icon="@drawable/mycart"
            android:title="@string/my_cart" />
    </group>
</menu>