<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F1F1">
   <!-- android:tools.context=".ui.home.HomeFragment"> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/search_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/search_gb"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="5dp"
            android:elevation="3dp"
            android:hint="@string/search_your_item_here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="13dp"
            tools:ignore="TextContrastCheck" />

        <!--view 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/popular_plants"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/view_all"
                android:textColor="@color/purple_700"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/pop_rec"/>

        <!--view 2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/explore_exotic_plants"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_all_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/view_all"
                android:textColor="@color/purple_700"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/pop_rec2"/>

        <!--view 3-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/flower_plants"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_all_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/view_all"
                android:textColor="@color/purple_700"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/pop_rec3"/>

        <!--view 4-->
      <!--  <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/popular_plants"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/view_all"
                android:textColor="@color/purple_700"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/pop_rec"/>

        view 5
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/popular_plants"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/view_all"
                android:textColor="@color/purple_700"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/pop_rec"/> -->

    </LinearLayout>

</ScrollView>